--- a/contactus.html
+++ b/contactus.html
@@ -23,6 +23,7 @@
               <a href="index.html">Home</a>
               <a>Profile <i class="fa-solid fa-user"></i></a>
               <a href="shop.html">Shop</a>
+              <a href="contactus.html">Contact us</a>
               <a>Cart <i class="fa-solid fa-cart-shopping"></i></a>
               <a>Orders List  <i class="fa-solid fa-boxes-packing"></i></a>
               <a>Logout  <i class="fa-solid fa-right-from-bracket"></i></a>
