--- a/responsivecartlist.html
+++ b/responsivecartlist.html
@@ -42,10 +42,9 @@
     </section>
 
     <section class="billing">
-        <p>Sub total:1000</p>
-        <button>Proceed to checkout</button>
+       
 
     </section>
-    <script src="script/responsive.js"></script>
+    <script src="script/responsivecartlist.js"></script>
   </body>
 </html>
