--- a/responsivecartlist.html
+++ b/responsivecartlist.html
@@ -45,6 +45,15 @@
        
 
     </section>
+
+
+    <section id="emptycart">
+      <img src="images/shopping-cart.gif">
+      <div><p>Your Cart is <span class="emt"><i>Empty</i></span><br>Add items to get <span class="start"><i>started</i></span></p>
+        <br><a class="shopnow" href="shop.html">shop now <span>></span></a> 
+      </div>
+  </section>
+  
     <script src="script/responsivecartlist.js"></script>
   </body>
 </html>
