--- a/addnewaddress.html
+++ b/addnewaddress.html
@@ -94,5 +94,6 @@
         </form>
 
         <script src="script/Addaddress.js"></script>
+        <script src="script/script.js"></script>
     </body>
     </html> 
