--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="expand-navbar" id="expandnav">
       <div class="nav-links-container">
           <a href="index.html">Home</a>
-          <a>Profile</a>
+          <a href="responsiveprofile.html">Profile</a>
           <a href="shop.html">Shop</a>
           <a href="responsivecartlist.html">Cart</a>
           <a>Logout</a>
@@ -36,7 +36,6 @@
           <li><a href="#contact">Contact Us</a></li>
           <li><a href="cartlist.html"><i class="fa-solid fa-cart-shopping"></i><span id="cartlistcount">0</span></a></li>
           <li><a href="EditProfile.html"><i class="fa-solid fa-user"></i></a></li>
-          <!-- <li><a href="EditProfile.html" onclick="toggleMenu(event)"><i class="fa-solid fa-user"></i></a></li> -->
           <span class="username">Sign in</span>
           
         </ul>
