--- a/shop.html
+++ b/shop.html
@@ -23,7 +23,7 @@
     <div class="expand-navbar" id="expandnav">
       <div class="nav-links-container">
           <a href="index.html">Home</a>
-          <a>Profile</a>
+          <a href="responsiveprofile.html">Profile</a>
           <a href="shop.html">Shop</a>
           <a href="responsivecartlist.html">Cart</a>
           <a>Logout</a>
